<resources>
    <string name="app_name">Practica del tema 4</string>
    <string name="desc_img_main">Imagen del videojuego pubg.</string>
    <string name="btn1_main">Números primos</string>
    <string name="btn2_main">Juego de aciertos</string>
    <string name="btn3_main">Desplazando imágenes</string>
    <string name="btn4_main">Seleccionando imágenes</string>
    <string name="name_activity1">Números primos</string>
    <string name="name_activity2">Juego de aciertos</string>
    <string name="name_activity3">Desplazando imágenes</string>
    <string name="name_activity4">Seleccionando imágenes</string>
    <string name="tv_act1">¿Es un número primo?</string>
    <string name="btn_calcular_act1">Calcular</string>
    <string name="hint_et_act1">Introduzca un número</string>
    <string name="num_primo">ES UN NÚMERO PRIMO</string>
    <string name="num_no_primo">NO ES UN NÚMERO PRIMO</string>
    <string name="toast_campos_vacios">Error, complete los campos</string>
    <string name="pais1">ESPAÑA</string>
    <string name="pais2">FRANCIA</string>
    <string name="pais3">PORTUGAL</string>
    <string name="pais4">ITALIA</string>
    <string name="pais5">ALEMANIA</string>
    <string name="pais6">BAHAMAS</string>
    <string name="pais7">BULGARIA</string>
    <string name="pais8">ESTONIA</string>
    <string name="pais9">JORDANIA</string>
    <string name="pais10">LIBIA</string>
    <string name="capital1">MADRID</string>
    <string name="capital2">PARÍS</string>
    <string name="capital3">LISBOA</string>
    <string name="capital4">ROMA</string>
    <string name="capital5">BERLÍN</string>
    <string name="capital6">NASÁU</string>
    <string name="capital7">SOFÍA</string>
    <string name="capital8">TALLÍN</string>
    <string name="capital9">AMÁN</string>
    <string name="capital10">TRÍPOLI</string>
    <string name="btn_verificar_act2">VERIFICAR</string>
    <string name="btn1_act4">PUBG</string>
    <string name="btn2_act4">FIFA 19</string>
    <string name="btn3_act4">PRO 19</string>
    <string name="btn4_act4">COD BO4</string>

    <array name="list_paises_act2">
        <item>ESPAÑA</item>
        <item>FRANCIA</item>
        <item>PORTUGAL</item>
        <item>ITALIA</item>
        <item>ALEMANIA</item>
        <item>BAHAMAS</item>
        <item>BULGARIA</item>
        <item>ESTONIA</item>
        <item>JORDANIA</item>
        <item>LIBIA</item>
    </array>
    <array name="list_capitales_atc2">
        <item>MADRID</item>
        <item>PARÍS</item>
        <item>LISBOA</item>
        <item>ROMA</item>
        <item>BERLÍN</item>
        <item>NASÁU</item>
        <item>SOFÍA</item>
        <item>AMÁN</item>
        <item>TRÍPOLI</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
