<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_main"
        android:layout_width="367dp"
        android:layout_height="368dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/desc_img_main"
        app:srcCompat="@drawable/ic_launcher_background" />

    <Button
        android:id="@+id/btn1_main"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_main"
        android:layout_alignParentStart="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="-10dp"
        android:drawableStart="@android:drawable/ic_menu_edit"
        android:text="@string/btn1_main" />

    <Button
        android:id="@+id/btn3_main"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_main"
        android:layout_alignParentStart="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="59dp"
        android:layout_marginBottom="5dp"
        android:drawableStart="@android:drawable/ic_menu_gallery"
        android:text="@string/btn3_main" />

    <Button
        android:id="@+id/btn2_main"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_main"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="17dp"
        android:drawableStart="@android:drawable/btn_star_big_on"
        android:text="@string/btn2_main" />

    <Button
        android:id="@+id/btn4_main"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_main"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="5dp"
        android:drawableStart="@android:drawable/ic_menu_agenda"
        android:text="@string/btn4_main" />
</RelativeLayout>