<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contenedor_act4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_seleccionando_imagenes">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn2_act4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:text="@string/btn2_act4" />

        <Button
            android:id="@+id/btn1_act4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:text="@string/btn1_act4" />

        <Button
            android:id="@+id/btn3_act4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:text="@string/btn3_act4" />

        <Button
            android:id="@+id/btn4_act4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn4_act4" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame_act4"
        android:layout_width="match_parent"
        android:layout_height="423dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="88dp"
        android:background="@drawable/fondo_act4">

    </FrameLayout>

</RelativeLayout>